    E_DEPRECATED is used to inform about stuff being scheduled for removal
    in future PHP versions. (Lars Strojny, Felipe, Marcus)
  . Added "request_order" INI variable to control specifically $_REQUEST
    behavior. (Stas)
  . Added support for exception linking. (Marcus)
  . Added ability to handle exceptions in destructors. (Marcus)

- Improved PHP runtime speed and memory usage:
  . Removed direct executor recursion. (Dmitry)
  . Use fastcall calling convention in executor on x86. (Dmitry)
  . Use IS_CV for direct access to $this variable. (Dmitry)
  . Use ZEND_FREE() opcode instead of ZEND_SWITCH_FREE(IS_TMP_VAR). (Dmitry)
  . Lazy EG(active_symbol_table) initialization. (Dmitry)
  . Optimized ZEND_RETURN opcode to not allocate and copy return value if it is
    not used. (Dmitry)
  . Replaced all flex based scanners with re2c based scanners.
    (Marcus, Nuno, Scott)
  . Added garbage collector. (David Wang, Dmitry).
  . Improved PHP binary size and startup speed with GCC4 visibility control.
    (Nuno)
  . Improved engine stack implementation for better performance and stability.
    (Dmitry)
  . Improved memory usage by moving constants to read only memory.
    (Dmitry, Pierre)
  . Changed exception handling. Now each op_array doesn't contain
    ZEND_HANDLE_EXCEPTION opcode in the end. (Dmitry)
  . Optimized require_once() and include_once() by eliminating fopen(3) on
    second usage. (Dmitry)
  . Optimized ZEND_FETCH_CLASS + ZEND_ADD_INTERFACE into single
    ZEND_ADD_INTERFACE opcode (Dmitry)

- Improved php.ini handling: (Jani)
  . Added ".htaccess" style user-defined php.ini files support for CGI/FastCGI
  . Added support for special [PATH=/opt/httpd/www.example.com/] and
    [HOST=www.example.com] sections. Directives set in these sections can
    not be overridden by user-defined ini-files or during runtime.
  . Added better error reporting for php.ini syntax errors
  . Allowed using full path to load modules using "extension" directive